--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -18,6 +18,7 @@
     "test": "mocha ./test/unit"
   },
   "dependencies": {
+    "@types/mongodb": "^3.3.8",
     "JSONStream": "~1.3.1",
     "async": "2.5.0",
     "bcrypt": "2.0.1",
