Fix CWC base-x import to be Browser compatible, add lint-fix script

--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf ts_build",
     "compile": "npm run clean && npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "test": "npm run compile && mocha -r ts-node/register test/*.ts",
     "pub": "npm run compile && npm publish"
   },
