Unregister throws on bad disconnect from db

--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "npm run tsc && node build/src/server.js",
-    "debug": "npm run tsc && node --inspect build/src/server.js --DEBUG true",
+    "debug": "npm run tsc && node --trace-warnings --inspect build/src/server.js --DEBUG true",
     "clean": "rm -rf build",
     "compile": "npm run tsc",
     "docs:build-html": "typedoc --out ./docs/html --tsconfig tsconfig.json ./src",
